--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -5,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zomato</title>
 </head>
-<Script>index.js</Script>
-<body>
-    
+<body>    
+        <p>
+            contact us at<a href="mailto:tomjerru@outlook.com">zomato@gmail.com </a> 
+        </p>
 </body>
 </html>
