--- a/index.html
+++ b/index.html
@@ -6,7 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zomato</title>
 </head>
-<body>    
+<body>   
+     <!-- Header -->
+    <header>
+        <div class="nav">
+            <div>
+                <p>
+                    contact us at<a href="mailto:tomjerru@outlook.com">zomato@gmail.com </a> 
+                </p>
+                <p>
+                    Get The App
+                </p>
+            </div>
+            <ul class="nav-bar">
+                <li>Add Restaurant</li>
+                <li>Log In</li>
+                <li>Sign Up</li>
+            </ul><!-- <ul> unordered list -->
+        </div>
+        <div class="head">
+            <img class="logo" src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png" alt="">
+            <h3>Discover the best food & drink in Orange City</h3>
+            <div class="search">
+                <div class="search-item">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>121, Multai Rd, Warud</p>
+                </div>
+                <div class="search-item">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" placeholder="Search for restaurants, cuisin or  dish">
+                </div>
+            </div>
+        </div>
+        <div class="header-imge">
+            <img src="https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="" srcset="">
+        </div>
+    </header>
         <p>
             contact us at<a href="mailto:tomjerru@outlook.com">zomato@gmail.com </a> 
         </p>
