--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zomato</title>
+    <title>Guess the number</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<Script>index.js</Script>
+
 <body>
-    
+    <div class="container">
+
+        <h1 >Guess The Number</h1>
+        <h3>Choose a number betweeen 1 - 10 !</h3>
+        <label for="number">Enter the number</label>
+        <input type="text" id="number">
+        <button type="submit" id="submit">Submit</button>
+    </div>
+   
+
+    <script src="index.js"></script>
 </body>
 </html>
