--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     contact us at<a href="mailto:tomjerru@outlook.com">zomato@gmail.com </a> 
                 </p>
                 <p>
-                    Get The App
+                    Get 
                 </p>
             </div>
             <ul class="nav-bar">
