--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="head">
             <img class="logo" src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png" alt="">
-            <h3>Discover the best food & drink in Orange City</h3>
+            <h3>Discover the best food City</h3>
             <div class="search">
                 <div class="search-item">
                     <i class="fa-solid fa-location-dot"></i>
