--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
             </div>
             <ul class="nav-bar">
-                <li>Add Restaurant</li>
+                <li>Add Restaut</li>
                 <li>Log In</li>
                 <li>Sign Up</li>
             </ul><!-- <ul> unordered list -->
