--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="search">
                 <div class="search-item">
                     <i class="fa-solid fa-location-dot"></i>
-                    <p>121, Multai Rd, Warud</p>
+                    <p>121, Multai Rd</p>
                 </div>
                 <div class="search-item">
                     <i class="fa-solid fa-magnifying-glass"></i>
